--- a/1.html
+++ b/1.html
@@ -1,9 +1,4 @@
-
-
-
-<html lang="en">
-
-<head>
+<html lang="en"><head>
 
 
 
@@ -95,7 +90,7 @@ Enjoy your unlimited access to zoo sex porn. You will now watch only the best be
 
 
 <!-- Drop Google Analytics here -->
-<script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
+<script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -114,7 +109,7 @@ Enjoy your unlimited access to zoo sex porn. You will now watch only the best be
 
 
 
-</head>
+<script type="text/javascript" src="https://cdn.fluidplayer.com/v2/current//scripts/vtt.js"></script></head>
 
 <body class="body-2">
 
@@ -140,9 +135,7 @@ Enjoy your unlimited access to zoo sex porn. You will now watch only the best be
 
 	<p align="center">
 
-		<span class="tubename">
-		Animal Sex
-	 </span>
+		<span class="tubename">Animal Sex Videos</span>
 
 	  <span class="tubedesc">
 	  Animal lovers private pictures and videos
@@ -159,17 +152,17 @@ Enjoy your unlimited access to zoo sex porn. You will now watch only the best be
 		
 		
 	  		
-	  <div class="row">
+	  </p><div class="row">
             <div class="col-md-12">
                 <div class="video-wrapper">
 
-                    <link rel="stylesheet" href="https://cdn.fluidplayer.com/v2/current/fluidplayer.min.css" type="text/css"/>
+                    <link rel="stylesheet" href="https://cdn.fluidplayer.com/v2/current/fluidplayer.min.css" type="text/css">
                     <script src="https://cdn.fluidplayer.com/v2/current/fluidplayer.min.js"></script>
 
-                    <video id='sample-video' controls style="width: 100%;">
-                          <source data-fluid-hd src='http://zoosex.online/m/3985.mp4' title="1080p" type='video/mp4' />
+                    <div class="fluid_video_wrapper fluid_player_layout_default" id="fluid_video_wrapper_sample-video" style="height: 640px; width: 1280px;"><video id="sample-video" style="width: 100%; height: 100%; cursor: default;" playsinline="" webkit-playsinline="" preload="auto" __idm_id__="893426689">
+                          <source data-fluid-hd="" src="http://zoosex.online/m/3985.mp4" title="1080p" type="video/mp4">
                    
-                    </video>
+                    </video><div id="sample-video_fluid_subtitles_container" class="fluid_subtitles_container"></div><div class="vast_video_loading" id="vast_video_loading_sample-video" style="display: none;"></div><div id="sample-video_fluid_controls_container" class="fluid_controls_container initial_controls_show fade_in"><div class="fluid_controls_left">   <div id="sample-video_fluid_control_playpause" class="fluid_button fluid_button_play"></div></div><div id="sample-video_fluid_controls_progress_container" class="fluid_controls_progress_container fluid_slider">   <div class="fluid_controls_progress">      <div id="sample-video_vast_control_currentprogress" class="fluid_controls_currentprogress" style="background-color: white; width: 1.26214%;">          <div id="sample-video_vast_control_currentpos" class="fluid_controls_currentpos"></div>      </div>   </div>   <div id="sample-video_buffered_amount" class="fluid_controls_buffered" style="width: 36.2082%;"></div>   <div id="sample-video_ad_markers_holder" class="fluid_controls_ad_markers_holder"></div><div id="sample-video_fluid_timeline_preview" class="fluid_timeline_preview" style="display: none; position: absolute;"></div></div><div class="fluid_controls_right">   <div id="sample-video_fluid_control_fullscreen" class="fluid_button fluid_button_fullscreen"></div>   <div id="sample-video_fluid_control_theatre" class="fluid_button fluid_button_theatre"></div>   <div id="sample-video_fluid_control_subtitles" class="fluid_button fluid_button_subtitles" style="display: none;"></div>   <div id="sample-video_fluid_control_video_source" class="fluid_button fluid_button_video_source" style="display: none;"></div>   <div id="sample-video_fluid_control_playback_rate" class="fluid_button fluid_button_playback_rate" style="display: none;"></div>   <div id="sample-video_fluid_control_download" class="fluid_button fluid_button_download" style="display: none;"></div>   <div id="sample-video_fluid_control_volume_container" class="fluid_control_volume_container fluid_slider">       <div id="sample-video_fluid_control_volume" class="fluid_control_volume">           <div id="sample-video_fluid_control_currentvolume" class="fluid_control_currentvolume" style="width: 56px;">               <div id="sample-video_fluid_control_volume_currentpos" class="fluid_control_volume_currentpos" style="left: 50.5px;"></div>           </div>       </div>   </div>   <div id="sample-video_fluid_control_mute" class="fluid_button fluid_button_volume"></div>   <div id="sample-video_fluid_control_duration" class="fluid_fluid_control_duration">00:01 / 01:43</div></div></div><div id="sample-video_fluid_context_menu" class="fluid_context_menu" style="display: none; position: absolute;"><ul>    <li id="sample-videocontext_option_play">Play</li>    <li id="sample-videocontext_option_mute">Mute</li>    <li id="sample-videocontext_option_fullscreen">Fullscreen</li>    <li id="sample-videocontext_option_homepage">Fluid Player 2.4.7</li></ul></div><div id="sample-video_fluid_initial_play_button" class="fluid_html_on_pause" style="opacity: 1;"><div id="sample-video_fluid_initial_play" class="fluid_initial_play" style="background-color: rgb(51, 51, 51); display: none;"><div id="sample-video_fluid_state_button" class="fluid_initial_pause_button"></div></div></div></div>
    <script>
                         var myFP = fluidPlayer('sample-video', {
                             layoutControls: {
@@ -235,9 +228,9 @@ Enjoy your unlimited access to zoo sex porn. You will now watch only the best be
 
 
 
-	</p>
+	<p></p>
 
-</center>
+</div></center>
 
 
 <div class="section">
@@ -3911,5 +3904,6 @@ ads = false
 	<!-- ads: false -->
 
 
-</body></html>
+
 .
+</body></html>
